# ---------------------------------------- packages --------------------------------------------------------------------
# ======================================================================================================================
find_package(cxxshm REQUIRED)
find_package(cxxsemaphore REQUIRED)
find_package(cxxopts REQUIRED)

# ---------------------------------------- external libs ---------------------------------------------------------------
# ======================================================================================================================
find_library(modbus_library modbus)

# ---------------------------------------- subdirectories --------------------------------------------------------------
# ======================================================================================================================

# ---------------------------------------- link libraries --------------------------------------------------------------
# ======================================================================================================================
target_link_libraries(${Target} PRIVATE ${modbus_library})
target_link_libraries(${Target} PRIVATE rt)
target_link_libraries(${Target} PRIVATE INTERFACE cxxopts)
target_link_libraries(${Target} PRIVATE cxxshm)
target_link_libraries(${Target} PRIVATE cxxsemaphore)
